--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Speed Test</title>
   <link rel="stylesheet" href="styles.css">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
 </head>
 <body class="d-flex-c">
 
